authentication-nodejs/deployment/kubernetes.yaml
kind: Service
apiVersion: v1
metadata:
  name: authentication
  labels:
    app: authentication
spec:
  selector:
    app: authentication
  ports:
    - port: 3000
      name: http
  type: NodePort
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentication
spec:
  selector:
    matchLabels:
      app: authentication
  replicas: 1
  template:
    metadata:
      labels:
        app: authentication
        version: v1
    spec:
      containers:
      - name: authentication
        image: authentication:1
        ports:
        - containerPort: 3000
      restartPolicy: Always
---
