authentication-nodejs/deployment/istio-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: authentication-egress
spec:
  hosts:
  - us-south.appid.cloud.ibm.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication-egress
spec:
  hosts:
  - us-south.appid.cloud.ibm.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - us-south.appid.cloud.ibm.com
    route:
    - destination:
        host: us-south.appid.cloud.ibm.com
        port:
          number: 443
      weight: 100
