authentication-nodejs/deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
spec:
  hosts:
  - authentication
  http:
  - route:
    - destination:
        host: authentication
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authentication
spec:
  host: authentication
  subsets:
  - name: v1
    labels:
      version: v1
---
